# python_viz_snippets

./: README.md  pyproject.toml
docs/: snipptets.ipynb
