[tool.poetry]
name = "python_viz_snippets"
version = "0.1.0"
description = ""
authors = ["Jebushdd <jebushdd@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.1.1"
numpy = "^2.1.1"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
openpyxl = "^3.1.5"
xlrd = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
